feat: 新增邮箱验证机制
